feat: add AI-powered music documentary generation with Spotify integration

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,10 @@ REDIRECT_URI=http://localhost:8888/callback
 
 # Server Configuration
 PORT=8888
+CLIENT_DEBUG=0 # set to 1 to enable verbose client logs in the browser
 
 # Example MP3 file path (relative to the public directory)
 MP3_FILE_PATH=/audio/advertisement.mp3
+
+# OpenAI
+OPENAI_API_KEY=your_openai_api_key
