--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "request": "^2.88.2",
-    "spotify-web-api-js": "^1.5.2"
+    "spotify-web-api-js": "^1.5.2",
+    "openai": "^4.56.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
