feat: add OpenAI TTS generation for narration segments

--- a/.env.example
+++ b/.env.example
@@ -6,9 +6,17 @@ REDIRECT_URI=http://localhost:8888/callback
 # Server Configuration
 PORT=8888
 CLIENT_DEBUG=0 # set to 1 to enable verbose client logs in the browser
+SERVER_DEBUG=0 # set to 1 to enable verbose server logs
 
 # Example MP3 file path (relative to the public directory)
 MP3_FILE_PATH=/audio/advertisement.mp3
 
 # OpenAI
 OPENAI_API_KEY=your_openai_api_key
+
+# OpenAI TTS
+# See: https://platform.openai.com/docs/guides/text-to-speech
+OPENAI_TTS_MODEL=gpt-4o-mini-tts
+OPENAI_TTS_VOICE=alloy
+# Where to store generated MP3 files (served statically)
+TTS_OUTPUT_DIR=public/tts
