--- a/.env.example
+++ b/.env.example
@@ -20,3 +20,8 @@ OPENAI_TTS_MODEL=gpt-4o-mini-tts
 OPENAI_TTS_VOICE=alloy
 # Where to store generated MP3 files (served statically)
 TTS_OUTPUT_DIR=public/tts
+
+# Development features
+# When set to 1, the /api/tts-batch endpoint returns a placeholder MP3 URL for each
+# narration segment instead of calling OpenAI (useful for testing without API calls)
+MOCK_TTS=0
