--- a/.env.example
+++ b/.env.example
@@ -18,8 +18,14 @@ OPENAI_API_KEY=your_openai_api_key
 # See: https://platform.openai.com/docs/guides/text-to-speech
 OPENAI_TTS_MODEL=gpt-4o-mini-tts
 OPENAI_TTS_VOICE=alloy
-# Where to store generated MP3 files (served statically)
-TTS_OUTPUT_DIR=public/tts
+# Runtime data root for playlists and TTS (Docker: mount /runtime-data)
+# If unset, defaults to ./data in the project. Example for Docker:
+# RUNTIME_DATA_DIR=/runtime-data
+RUNTIME_DATA_DIR=
+
+# Where to store generated MP3 files (served statically at /tts)
+# If unset, defaults to $RUNTIME_DATA_DIR/tts (or ./data/tts when RUNTIME_DATA_DIR is unset)
+TTS_OUTPUT_DIR=
 
 # Development features
 # When set to 1, the /api/tts-batch endpoint returns a placeholder MP3 URL for each
