feat: add configurable initial playlist and empty state UI

--- a/.env.example
+++ b/.env.example
@@ -23,6 +23,10 @@ OPENAI_TTS_VOICE=alloy
 # RUNTIME_DATA_DIR=/runtime-data
 RUNTIME_DATA_DIR=
 
+# Optional initial playlist to auto-load (must exist in runtime data)
+# If unset or invalid, no default is loaded and the player waits for user action
+INITIAL_PLAYLIST_ID=
+
 # Where to store generated MP3 files (served statically at /tts)
 # If unset, defaults to $RUNTIME_DATA_DIR/tts (or ./data/tts when RUNTIME_DATA_DIR is unset)
 TTS_OUTPUT_DIR=
