--- a/.env.example
+++ b/.env.example
@@ -17,7 +17,9 @@ OPENAI_API_KEY=your_openai_api_key
 # OpenAI TTS
 # See: https://platform.openai.com/docs/guides/text-to-speech
 OPENAI_TTS_MODEL=gpt-4o-mini-tts
-OPENAI_TTS_VOICE=alloy
+# Available voices: alloy, echo, fable, onyx, nova, shimmer
+# Recommended for music journalism: nova (warm, engaging) or onyx (deep, authoritative)
+OPENAI_TTS_VOICE=nova
 # Runtime data root for playlists and TTS (Docker: mount /runtime-data)
 # If unset, defaults to ./data in the project. Example for Docker:
 # RUNTIME_DATA_DIR=/runtime-data
