--- a/.env.example
+++ b/.env.example
@@ -20,6 +20,8 @@ OPENAI_TTS_MODEL=gpt-4o-mini-tts
 # Available voices: alloy, echo, fable, onyx, nova, shimmer
 # Recommended for music journalism: nova (warm, engaging) or onyx (deep, authoritative)
 OPENAI_TTS_VOICE=nova
+# Speed: 0.25 to 4.0 (1.0 is normal, 1.25 is slightly faster for more dynamic delivery)
+OPENAI_TTS_SPEED=1.25
 # Runtime data root for playlists and TTS (Docker: mount /runtime-data)
 # If unset, defaults to ./data in the project. Example for Docker:
 # RUNTIME_DATA_DIR=/runtime-data
