refactor: remove REDIRECT_URI from .env since it's now auto-set based on origin

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 # Spotify API Credentials
 CLIENT_ID=your_spotify_client_id
 CLIENT_SECRET=your_spotify_client_secret
-REDIRECT_URI=http://localhost:8888/callback
+# Note: Redirect URI is automatically set to {current_origin}/callback
 
 # Server Configuration
 PORT=8888
